# litellm

./: .dockerignore  Dockerfile  Dockerfile.local  docker-entrypoint.sh  justfile  pyproject.toml
.github/workflows/: build-push.yml
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: chat.py
app/application/: chat_service.py
app/domain/: models.py  services.py
app/infrastructure/: base.py  bedrock_client.py  claude_client.py  local_client.py  platform_factory.py
litellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
litellm_proxy.egg-info/: PKG-INFO  SOURCES.txt
tests/integration/: test_api.py
tests/unit/: test_bedrock_client.py  test_chat_service.py  test_claude_client.py  test_config.py  test_local_client.py  test_models.py  test_platform_factory.py
